--- a/index.html
+++ b/index.html
@@ -1,39 +1,39 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>计算机的浪漫 - 爱心动态效果</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background-color: #000;
-      overflow: hidden;
-      height: 100vh;
+<！doctype 超文本标记语言>
+<超文本标记语言<html 朗="zh-CN">Lang="zh-CN">
+<头>
+<元 字符集="UTF-8"><元 字符集="UTF-8">
+<元 姓名=元内容=姓名>内容元=
+<标题>计算机的浪漫-爱心动态效果</标题><标题>计算机的浪漫 - 爱心动态效果</标题>
+<风格><
+正文{身体 {
+页边距：0；边缘：0;
+填充：0；填充：0;
+背景色：#000；背景色: #000;
+溢出：隐藏；溢出：隐藏的;
+高度：100vh；高度：100；
     }
-    .popup {
-      position: absolute;
-      padding: 12px 8px;
-      border-radius: 8px;
-      color: #fff;
-      font-family: "PingFang SC", "微软雅黑", sans-serif;
-      font-size: 14px;
-      text-align: center;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4);
-      animation: fadeIn 0.6s ease-in-out;
-      z-index: 10;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-        transform: scale(0.7);
-      }
-      to {
-        opacity: 0.95;
+。弹出窗口{弹出窗口。{
+位置：绝对；位置：绝对的;
+填料：12px8px；padding:12 PXPX；
+边界半径：8px；border-radius:8；
+颜色：#FFF；颜色： #FFF；
+字体系列："平方SC"，"微软雅黑""平方SC"，无衬线；字体系列："平方SC"，"微软雅黑"，
+字体大小：14:14px；字体；
+文本对齐：居中；文本对齐：中心;
+盒阴影：02px10pxrgba(0，0，0，0.4)；长方体阴影：02PX10PXRGBA(0，0，0，0.4)；
+动画：淡入0.6s淡入淡出；动画：淡入0.6s易进易出；
+Z指数：10；z指数：10；
+显示：柔性；显示：弯曲;
+对齐项：居中；对齐项目：中心;
+对齐-内容：居中；justify-content：中心；
+}
+@keyframes 淡入{@个关键帧淡入{
+来自{从……起 {
+不透明度：0；不透明度：0;
+变换：比例(0.7)；变换：规模(0.7);
+}
+至{到 {
+不透明度：0.95；不透明度: 0.
         transform: scale(1);
       }
     }
